--- a/cds-ui/designer-client/src/app/modules/feature-modules/resource-dictionary/resource-dictionary-creation/sources-template/sources-template.component.css
+++ b/cds-ui/designer-client/src/app/modules/feature-modules/resource-dictionary/resource-dictionary-creation/sources-template/sources-template.component.css
@@ -29,7 +29,7 @@
   margin-bottom: 0;
   padding: 12px 20px;
   border-bottom: solid 1px #D7E7F9;
-  color: #C3CDDB;
+  color: #6B7D93;
   text-transform: uppercase;
   font-size: 12px;
   font-weight: bold;
@@ -55,7 +55,7 @@
   font-size: 13px;
 }
 .searchBox input::placeholder{
-  color: #C3CDDB;
+  color: #6B7D93;
   font-size: 12px;
 }
 .searchBox input:focus{
